[package]
name = "r_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
error-chain = "0.12.4"
flate2 = "1.0.26"
log = "0.4.19"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sys-mount = "2.0.2"
tar = "0.4.38"
